<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_display" />

    <Button
        android:id="@+id/name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_enter"
        android:onClick="name_click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_field">
    </Button>

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        app:layout_constraintBottom_toTopOf="@id/name_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_display">
    </EditText>

    <TextView
        android:id="@+id/hello_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_empty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_display">
    </TextView>

    <Button
        android:id="@+id/hello_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_press"
        android:onClick="hello_click"
        app:layout_constraintTop_toBottomOf="@id/hello_display"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_display">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>